[package]
name = "dict-not-none"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "_dict_not_none"
crate-type = ["cdylib"]

[dependencies]

# for "present version" of dict_not_none_pyo3
pyo3 = "0.19"

# uncomment to use "future version" of dict_not_none_pyo3
# pyo3 = { git = "https://github.com/davidhewitt/pyo3", branch = "list-methods-trait" }

[profile.release]
lto = "fat"
